--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,10 +1,10 @@
-header {
+#main-header {
   width: 100%;
   height: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(240, 107, 102);
+  background-color: #e7453f;
   background-image: url('../images/escheresque.png');
 }
 
