--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -106,3 +106,44 @@
   display: inline-block;
   margin-top: 15px;
 }
+
+#error-block {
+  display: none;
+  border: 3px solid #e7453f;
+  margin-top: 15px;
+  width: 100%;
+  height: 80px;
+  display: relative;
+}
+
+#error-block span {
+  width: 100%;
+  border: 1px solid black;
+}
+
+#error-block i {
+  display: inline-block;
+}
+
+#tri1, #tri2 {
+  position: absolute;
+  line-height: 75px;
+}
+
+#tri1 {
+  left: 10%;
+}
+
+#tri2 {
+  right: 10%;
+}
+
+#error-block h4 {
+  display: inline-block;
+  height: 75px;
+  line-height: 75px;
+  width: 100%;
+  margin-top: 0;
+  margin-bottom: 0;
+  text-align: center;
+}
