--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -174,10 +174,14 @@
   margin-top: 0;
   margin-bottom: 0;
   text-align: center;
+  font-size: 22px;
 }
 
 @media all and (min-width: 1024px) {
   #tri1 {
     left: 50%;
+  }
+  #error-block h4 {
+    font-size: 18px;
   }
 }
