--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 500px;
   padding-top: 120px;
+  margin-bottom: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
