--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -5,7 +5,7 @@ nav {
   color: #FFFFFF;
   padding-left: 1.5em;
   padding-right: 1.5em;
-  position: fixed;
+  position: absolute;
   z-index: 10;
 }
 
@@ -53,6 +53,7 @@ nav {
 @media all and (min-width: 1024px) {
   nav {
     background-color: #4056A1;
+    position: fixed;
   }
   #new-tweet-prompt i {
     color: #e7453f;
