--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -9,13 +9,12 @@
 
 #tweet-text {
   width: 100%;
-  height: 25px;
+  height: 60px;
   background: none;
   border: none;
   resize: none;
   outline: none;
   border-bottom: 3px solid black;
-  margin-bottom: 15px;
 }
 
 .new-tweet h2 {
@@ -24,16 +23,20 @@
   margin-bottom: 15px;
 }
 
-.new-tweet label {
-  font-weight: 600;
+#tweet-form {
+  height: 80px;
 }
 
 .new-tweet textarea {
-  font-size: 16px;
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 22px;
+  margin-top: -30px;
 }
 
 .new-tweet button {
   border-style: none;
+  border-radius: 5px;
   background-color: #4056A1;
   color: white;
   padding: 5px;
@@ -45,6 +48,7 @@
 
 .new-tweet button, output {
   font-family: 'Bungee', cursive;
+  margin-top: 20px;
 }
 
 .red-text {
@@ -81,11 +85,6 @@
   position: absolute;
 }
 
-.tweet-container h2 {
-  margin-left: 15px;
-  font-size: 25px;
-}
-
 .tweet-container h3 {
   margin-left: 25px;
   font-size: 15px;
@@ -115,16 +114,10 @@
 #error-block {
   display: none;
   border: 3px solid #e7453f;
-  margin-top: 15px;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
   width: 100%;
   height: 80px;
   display: relative;
-}
-
-#error-block span {
-  width: 100%;
-  border: 1px solid black;
 }
 
 #error-block i {
