--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -66,6 +66,10 @@
   margin-right: 10px;
 }
 
+#tweet-body h2 {
+  word-break: break-all;
+}
+
 .tweet-container header {
   margin-left: 15px;
   position: relative;
@@ -75,14 +79,26 @@
   display: inline-block;
 }
 
-.tweet-container h1 {
+.tweet-container h1, h5 {
   display: inline-block;
-  font-size: 25px;
-  font-weight: 300;
-  margin-left: 10px;
+  margin-top: 15px;
+  margin-bottom: 0px;
+  position: absolute;
   height: 65px;
   line-height: 65px;
-  position: absolute;
+
+}
+
+.tweet-container h1 {
+  font-size: 30px;
+  font-weight: 300;
+  left: 80px;
+}
+
+.tweet-container h5 {
+  color: rgba(84, 81, 73, 0.5);
+  font-size: 25px;
+  right: 40px;
 }
 
 .tweet-container h3 {
