Add a smaller fixed nav to the mobile view

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -9,6 +9,7 @@
   justify-content: center;
   background-color: #e7453f;
   background-image: url('../images/escheresque.png');
+  z-index: 9;
 }
 
 #name-wrapper {
